- Parcelize plugin added - compile sdk version updated - junit jupiter and some other dependencies added